--- a/index.html
+++ b/index.html
@@ -2197,10 +2197,10 @@
 
     <section
     class="elementor-element elementor-element-58e3223d elementor-section-boxed elementor-section-height-default elementor-section-height-default elementor-section elementor-top-section"
-    data-id="58e3223d" data-element_type="section">
+    data-id="58e3223d" data-element_type="section" >
 
     <h1 class="text-center" id="id-5" >Categorias</h1>
-    <div class="elementor-container elementor-column-gap-no">
+    <div >
         <div class="elementor-row">
             <div class="aux-parallax-section elementor-element elementor-element-18781e83 elementor-column elementor-col-33 elementor-top-column"
                 data-id="18781e83" data-element_type="column">
@@ -2398,6 +2398,24 @@
     </div>
 </section>
 
+<section id="testimonials" class="testimonials">
+    <div >
+
+      <div class="margin" data-aos="fade-up" data-aos-delay="100">
+        <div class="beforefooter">
+            <h2 id="id-51"></h2>
+            <p id="id-52"></p>
+            <a href="contact.html" class="boton boton-amarillo" id="id-53"></a>
+
+ 
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
 
 
   </main>
@@ -2472,7 +2490,7 @@ l21.186-23.834c1.766-2.648,2.648-6.179,1.766-8.828l-25.6-57.379C193.324,138.593,
         <div class="row">
 
           <div class="col-lg-6 col-md-6 footer-contact">
-            <h3 id="id-18"> </h3>
+            <h2 id="id-18"> </h2>
             <p id="id-19">
  
             </p>
