--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>Com</span>pany</a></h1>
+      <!-- <h1 class="logo me-auto"><a href="index.html"><span>Com</span>pany</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto"><img src="assets/img/LogoHeader.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -257,7 +257,7 @@
 
 
           <div class="col-lg-6 col-md-6 footer-newsletter">
-            <img src="assets/img/400x200.png" alt="" class="img-fluid">
+            <img src="assets/img/LogoTest.png" alt="" class="img-fluid">
           </div>
 
         </div>
