--- a/services_2.html
+++ b/services_2.html
@@ -2231,8 +2231,8 @@
           <div class="wa__popup_content_list">
               <div class="wa__popup_content_item ">
                   <a target="_blank"
-                      href="../web.whatsapp.com/send3bf6.html?phone=584141403794&amp;text=Bienvenidos%20a%20Mejia%20Import%20Export%20%c2%bfEn%20que%20podemos%20ayudarle?"
-                      class="wa__stt wa__stt_online">
+                  href="https://web.whatsapp.com/send?phone=584141403794&amp;text=Bienvenidos%20a%20Luxury%20Group%20%c2%bfEn%20que%20podemos%20ayudarle?"
+                  class="wa__stt wa__stt_online">
                       <div class="wa__popup_avatar nta-default-avt">
                           <svg width="48px" height="48px" class="nta-whatsapp-default-avatar" version="1.1"
                               id="Layer_1" xmlns="http://www.w3.org/2000/svg"
