--- a/contact.html
+++ b/contact.html
@@ -152,9 +152,9 @@
 
         <div class="row mt-5 justify-content-center" data-aos="fade-up">
           <div class="col-lg-10">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="correo/index.php" method="post" role="form" class="php-email-form">
               <div class="row">
-                <div class="col-md-6 form-group" id="id-33">
+                <div class="col-md-6 form-group" id="id-33" >
 
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0" id="id-34">
@@ -203,8 +203,8 @@
           <div class="wa__popup_content_list">
               <div class="wa__popup_content_item ">
                   <a target="_blank"
-                      href="../web.whatsapp.com/send3bf6.html?phone=584141403794&amp;text=Bienvenidos%20a%20Mejia%20Import%20Export%20%c2%bfEn%20que%20podemos%20ayudarle?"
-                      class="wa__stt wa__stt_online">
+                  href="https://web.whatsapp.com/send?phone=584141403794&amp;text=Bienvenidos%20a%20Luxury%20Group%20%c2%bfEn%20que%20podemos%20ayudarle?"
+                  class="wa__stt wa__stt_online">
                       <div class="wa__popup_avatar nta-default-avt">
                           <svg width="48px" height="48px" class="nta-whatsapp-default-avatar" version="1.1"
                               id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -335,6 +335,7 @@
   
     </script>
     <script type="text/javascript" src="idiom.js"></script>
+
   
 
 </body>
