--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 
         <div class="row mt-5 justify-content-center" data-aos="fade-up">
           <div class="col-lg-10">
-            <form action="correo/index.php" method="post" role="form" class="php-email-form">
+            <form action="email/index.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group" id="id-33" >
 
