--- a/contact.html
+++ b/contact.html
@@ -292,6 +292,28 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script type="text/javascript">
+		function isMobileWA() {
+			return (/Android|webOS|iPhone|iPad|iPod|Windows Phone|IEMobile|Mobile|BlackBerry/i.test(navigator.userAgent));
+		}
+		var elm = jQuery('a[href*="whatsapp.com"]');
+		jQuery.each(elm, function (index, value) {
+			var item = jQuery(value).attr('href');
+			if (item.indexOf('chat') != -1) {
+				//nothing
+			} else if (item.indexOf('web.whatsapp') != -1 && isMobileWA()) {
+				var itemLink = item;
+				var newLink = itemLink.replace('web.whatsapp', 'api.whatsapp');
+				jQuery(value).attr("href", newLink);
+			} else if (item.indexOf('api.whatsapp') != -1 && !isMobileWA()) {
+				var itemLink = item;
+				var newLink = itemLink.replace('api.whatsapp', 'web.whatsapp');
+				jQuery(value).attr("href", newLink);
+			}
+		});
+	</script>
+  
   <script>
 
     function changeIdiom(lenguaj) {
